Add support for user specific endpoint
Add `baseapiurl` config option
Add `FUELSDK_BASE_API_URL` environment option
Make REST endpoints use new API urls options
Update README.md

--- a/FuelSDK/config.python.template
+++ b/FuelSDK/config.python.template
@@ -3,5 +3,6 @@ appsignature: none
 clientid: XXXXXXXXXXXXXXXXXXXXXXXX
 clientsecret: XXXXXXXXXXXXXXXXXXXXXXXX
 defaultwsdl: https://webservice.exacttarget.com/etframework.wsdl
+baseapiurl: https://www.exacttargetapis.com
 authenticationurl: https://auth.exacttargetapis.com/v1/requestToken?legacy=1
 wsdl_file_local_loc: /tmp/ExactTargetWSDL.s6.xml
